# axiscam

./: .gitignore  .secrets.baseline  LICENSE.md  README.md  pyproject.toml
docs/: api-modules.md  architecture.md  cli-reference.md  configuration.md  device-classes.md  index.md
src/axis_cam/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
src/axis_cam/api/: __init__.py  action.py  analytics.py  analytics_mqtt.py  audio_multicast.py  base.py  cert.py  crypto_policy.py  device_info.py  firewall.py  geolocation.py  lldp.py  logs.py  mqtt.py  network.py  networkpairing.py  ntp.py  oauth.py  oidc.py  param.py  recording.py  serverreport.py  snapshot.py  snmp.py  ssh.py  storage.py  stream.py  time.py  virtualhost.py
src/axis_cam/devices/: __init__.py  base.py  camera.py  intercom.py  recorder.py  speaker.py
src/specs/: c1410.json  i8016-lve.json  m3216-lve.json  s3008.json
tests/: __init__.py  conftest.py  test_api_device_info.py  test_api_logs.py  test_api_param.py  test_api_time.py  test_cli.py  test_client.py  test_config.py  test_devices.py  test_exceptions.py  test_models.py
