[project]
name = "axis-cam"
version = "0.1.0"
description = "CLI tool for managing AXIS cameras, recorders, and devices via VAPIX API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Andy Taylor", email = "andy@andytaylor.dev" }]
keywords = ["axis", "camera", "vapix", "cli", "network"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pyyaml>=6.0.0",
  "platformdirs>=4.0.0",
  "shellingham>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
axiscam = "axis_cam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axis_cam"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
  "D",   # pydocstyle
]
ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
  "integration: marks tests as integration tests (requires live devices)",
]

[tool.coverage.run]
source = ["src/axis_cam"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
fail_under = 80

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
reportCallIssue = "warning"
reportArgumentType = "warning"
